--- a/index.html
+++ b/index.html
@@ -92,12 +92,9 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Local Artist</h2>
-                    <h3 class="section-subheading text-muted"> Based in North London.</h3>
-                    <h1 class="section-subheading text-muted"> Please chose your own artworks, and can pick a colour scheme to match </h1>
-                    <h2 class="section-subheading text-muted"> Merry Xmas </h2>
-                    <h2 class="section-subheading text-muted"> Rachel xx </h2>
+                <div class="col-lg-12 text-center intro-text">
+                    <div class="subintro-text">Based in North London</div>
+                    <!-- <h2 class="section-heading">Based in North London</h2> -->
                 </div>
             </div>
         </div>
@@ -109,7 +106,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Some examples of my work</h3>
+                    <!-- <h3 class="section-subheading text-muted">Some examples of my work</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -122,11 +119,12 @@
                         </div>
                         <img src="img/Assets/ld5jan30th.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Example One</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
+                <!-- new-mysticmarrcollage710.jpg -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -136,10 +134,10 @@
                         </div>
                         <img src="img/Assets/mrsfwdrawingApril2nd.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Example Two</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
@@ -148,12 +146,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Assets/selfp2611.jpg" class="img-responsive" alt="">
+                        <img src="img/Assets/new-mysticmarrcollage710.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Example 3</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
@@ -162,12 +160,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Assets/waterlowpark2.jpg" class="img-responsive" alt="">
+                        <img src="img/Assets/new-photo.JPG" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Example 4</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
@@ -176,12 +174,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Assets/waterlowpkjuly3rd.jpg" class="img-responsive" alt="">
+                        <img src="img/Assets/new-redfamily.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Examples 5</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
@@ -190,12 +188,12 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Assets/courbetthecornsifters.jpg" class="img-responsive" alt="">
+                        <img src="img/Assets/waterlowpark2.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <!-- <div class="portfolio-caption">
                         <h4>Examples 6</h4>
                         <p class="text-muted">Description</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
